ховер+фокус  тел і мейл+ фікс лого

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <footer class="contacts">
         
         <a href="./index.html" class="header-logo-link link">
-            <span class="style-half-logo"> Web</span>Studio
+            <span class="style-logo"> Web</span>Studio
         </a> 
         <address class="adress ">  г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="contacts-list list">
