--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
     <footer class="contacts">
         
         <a href="./index.html" class="header-logo-link link">
-            <span class="style-half-logo"> Web</span>Studio
+            <span class="style-logo"> Web</span>Studio
         </a> 
         <address class="adress ">  г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="contacts-list list">
