--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -48,6 +49,7 @@
             </section>
      
         <section class="advantage">
+            <div class="container">
             <ul class="advantage-list list" >
                 <li class="advantage-item">
                     <h3 class="advantage-tittle">Внимание к деталям</h3>
@@ -65,15 +67,16 @@
                     <h3 class="advantage-tittle">Современные технологии</h3>
                     <p class="advantage-sub-tittle">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
-            </ul>
+            </ul></div>
         </section>
         <section class="work">
-            <h2 class="work-tittle tittle">Чем мы занимаемся</h2>
+           <div class="cointainer"> 
+               <h2 class="work-tittle tittle">Чем мы занимаемся</h2>
             <ul class="work-list list">
                 <li class="work-item"> <img src="./images/img1.jpg " alt="Планирование" width=370></li>
                 <li class="work-item"> <img src="./images/img2.jpg " alt="Веб розробка " width=370></li>
                 <li class="work-item"><img src=" ./images/img3.jpg " alt="Дизайн " width=370></li>
-            </ul>
+            </ul></div>
         </section>
         <section class="team">
             <h2 class="team-tittle tittle">Наша команда</h2>
